# ttrpg-builder

./: .gitignore  README.md  pyproject.toml
app/: Class.py  Entity.py  Item.py  Species.py  Stat.py  class_class.py
