[tool.poetry]
name = "rpg-builder"
version = "0.1.0"
description = "A application to create rpg characters, and more."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
